--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "stripe": "^14.3.0",
     "supabase": "^1.106.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
