--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
+    "react-toastify": "^9.1.3",
     "stripe": "^14.3.0",
     "supabase": "^1.106.1",
     "tailwind-merge": "^2.0.0",
