--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.4",
@@ -22,6 +23,7 @@
     "jose": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.290.0",
+    "moment": "^2.29.4",
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -32,7 +34,8 @@
     "supabase": "^1.106.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.4",
