--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@supabase/auth-helpers-nextjs": "^0.8.4",
     "@supabase/supabase-js": "^2.38.4",
+    "@types/lodash": "^4.14.202",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "eslint": "^8.55.0",
     "jose": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.290.0",
     "moment": "^2.29.4",
     "next": "14.0.0",
